--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -50,7 +50,7 @@ height: 100vh;
     
 }
 .header .header-textbox h1{
-    font-size: 2.3rem;
+    font-size: 2rem;
     
     font-family: 'Bitter'
   
@@ -88,22 +88,28 @@ height: 100vh;
 }
 
 
+#about-section h2{
+        font-size: 1.2rem;
+     color: #ed7180;
+    margin-top: 1rem;
 
+        
+    }
 #about-section .about-textbox{
      display: flex;
     flex-direction: column;
-   align-items: center;
-    justify-content: center;
-    height: 80vh;
-     padding: 2rem 2rem 1rem;
+ 
+    
+   
+  
 }
 
 
 #about-section .about-textbox .paragraaf{
     
 text-align: justify;
-    padding:0.5rem 0;
-    margin: 2rem 3rem;
+    padding:0.5rem 1rem;
+    margin: 1rem .5rem;
 }
 
 #about-section .about-textbox #p2{
@@ -111,22 +117,21 @@ text-align: justify;
 }
 
 #about-section #meerknop #meer{
-    color: #ed7180;
-    font-size: 0.8rem; 
+   
+    font-size: 0.8rem;
+    margin-top:-1rem
         
 }
 
 #about-section #meerknop{
     align-self: flex-end;
-    margin-right: 3rem;
+    margin-right: 1.5rem;
     
 }
 
 
 
-.social-mediabox{
-    margin-top:-4rem;
-}
+
 
 #about-section nav a{
     color:#695569;
@@ -136,6 +141,7 @@ text-align: justify;
     text-align: center;
     padding: 1rem;
     color: #ed7180;
+    font-size: .8rem;
     
     
     
@@ -179,10 +185,15 @@ background-color:
     background-color: #fefbee;
 }
 
-@media (min-width: 800px){
+@media (min-width: 500px){
     
-    .about-textbox h2{
-        font-size: 2rem;
+    #about-section h2{
+        font-size: 1.5rem;
+        
+    }
+    
+    #alle-tekst{
+       margin-top: 20%;
         
     }
     
@@ -208,4 +219,48 @@ background-color:
     }
     
     
+}
+
+@media (min-width: 700px){
+    
+    .header-textbox #kop{
+        font-size: 3rem;
+        
+    }
+    
+    
+    .header-textbox h3{
+        font-size: 2rem;
+    }
+    
+    #about-section h2{
+        font-size: 2rem;
+        
+    }
+    
+    .about-textbox{
+        display: flex;
+        flex-direction: column;
+        margin: 3rem 3rem 0rem 3rem;
+        
+    }
+    
+    .about-textbox p{
+    
+        font-size: 1.5rem;
+        margin: 0rem 3rem;
+        
+    }
+    
+    #about-section .about-textbox #p2{
+    display: block;
+}
+    #about-section #meer{
+        display: none;
+    }
+    
+    #about-section #email, #telefoon{
+        font-size:1.5rem;
+        
+    }
 }
