--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,8 @@
 $color-one:#ef7f81;
- $color-two:#badfda;
- $color-three:#fefaee;
- $color-text-one:#695569;
- $color-text-two:#fff;
+$color-two:#badfda;
+$color-three:#FCFCFC;
+$color-text-one:#695569;
+$color-text-two:#fff;
 @mixin background-image {
     background-size: cover;
     background-position: top;
@@ -61,6 +61,10 @@ nav {
     display: flex;
     flex-direction: column;
     align-content: center;
+    @media screen and (min-width: 800px){
+        width: 50vw;
+        height: 97vh;
+    }
     .header-textbox {
         width: 90%;
         position: absolute;
@@ -69,13 +73,21 @@ nav {
         transform: translate(-50%, -50%);
         color: rgba(259, 259, 259, .9);
         text-align: center;
+        @media screen and (min-width: 800px){
+            left: 25%;
+        // transform: translate(-25%, -25%);
+            width: 45%;
+        }
+
+
         h1 {
             font-size: 2rem;
             font-family: 'Bitter';
+            animation-name: vanLinks;
+            animation-duration: 1.5s;
             @media screen and (min-width: 500px) {
-                font-size: 4rem;
-                animation-name: vanLinks;
-                animation-duration: 1.5s;
+                font-size: 3rem;
+                
                 
             }
             .subkop {
@@ -91,6 +103,31 @@ nav {
         }
     }
 }
+/*resumee section*/
+.resumee{
+    height: 100vh;
+    background-color: $color-three;
+    .jobs{
+        padding: 1rem;
+        margin:4rem 2rem;
+        text-align: justify;
+        .category{
+            color: $color-one;
+        }
+
+    }
+    @media screen and (min-width: 800px){
+        width: 50vw;
+    }
+}
+.big-screen-container{
+    @media screen and (min-width: 800px){
+        display:flex;
+        margin: 1rem;
+        // height: 100vw;
+    }
+}
+
 /*about section*/
 
 #about-section {
@@ -111,8 +148,7 @@ nav {
         height: 100vh;
         h2 {
             font-size: 2rem;
-            color: $color-one;
-//           margin-top: 1rem;
+            color: $color-text-one;
             padding: 1.5rem;
             width: 70vw;
             @media screen and (min-width: 600px) {
@@ -124,7 +160,7 @@ nav {
             @media screen and (min-width: 800px) {
                 
                 
-                font-size: 3rem;
+              
                  width:30vw;
             }
             
