--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,6 @@
 $color-one:#ef7f81;
+$color-one-trans:rgba(169, 238, 230, .7);
+
 $color-two:#badfda;
 $color-three:#FCFCFC;
 $color-text-one:#695569;
@@ -132,20 +134,37 @@ nav {
 
 #about-section {
     height: 100vh;
-    background-color: $color-three;
+   
     text-align: center;
     overflow: scroll;
+    
+    .groen-vlak{
+        height: 100vh;
+        margin: 1rem;
+        clip-path: polygon(39% 0, 100% 0, 100% 100%, 67% 100%);
+        background-color: $color-one-trans;
+        position: absolute;
+        width: 100vw;
+        
+        
+    }
+      
+    
     nav {
         a {
             color: $color-text-one;
         }
     }
     #alle-tekst {
+        position: relative;
+       
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         height: 100vh;
+        position: relative;
+     
         h2 {
             font-size: 2rem;
             color: $color-text-one;
@@ -179,11 +198,11 @@ nav {
                     text-align: justify;
                     padding: 0 1rem;
                     margin: 0.5rem .5rem;
-                    font-size: 1.5rem;
+                    font-size: 1rem;
                     
                     @media screen and (min-width: 800px) {
                 
-                font-size: 2rem;
+                font-size: 1.5rem;
             }
                 }
             }
