--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -4,6 +4,13 @@
   box-sizing: border-box;
   max-width: 100vw; }
 
+a {
+  text-decoration: none;
+  color: #fff; }
+  a:hover {
+    text-decoration: none;
+    color: #695569; }
+
 @keyframes vanLinks {
   0% {
     opacity: 0;
@@ -81,11 +88,28 @@ nav {
 /*resumee section*/
 .resumee {
   height: 100vh;
-  background-color: #FCFCFC; }
+  background-color: #FCFCFC;
+  font-size: 1.15rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
+  .resumee a {
+    color: #695569; }
   .resumee .jobs {
     padding: 1rem;
-    margin: 4rem 2rem;
+    margin: 0 2rem;
+    overflow: scroll;
     text-align: justify; }
+    @media screen and (min-width: 500px) {
+      .resumee .jobs {
+        font-size: 1.5rem; } }
+    @media screen and (min-width: 1000px) {
+      .resumee .jobs {
+        font-size: 1.6rem; } }
+    @media screen and (min-width: 1200px) {
+      .resumee .jobs {
+        font-size: 1.8rem; } }
     .resumee .jobs .category {
       color: #ef7f81; }
   @media screen and (min-width: 800px) {
@@ -108,7 +132,7 @@ nav {
     clip-path: polygon(39% 0, 100% 0, 100% 100%, 67% 100%);
     background-color: rgba(169, 238, 230, 0.7);
     position: absolute;
-    width: 100vw; }
+    width: 97vw; }
   #about-section nav a {
     color: #695569; }
   #about-section #alle-tekst {
@@ -141,7 +165,7 @@ nav {
         text-align: justify;
         padding: 0 1rem;
         margin: 0.5rem .5rem;
-        font-size: 1rem; }
+        font-size: 1.2rem; }
         @media screen and (min-width: 800px) {
           #about-section #alle-tekst .about-textbox .about-tekstvlak .paragraaf {
             font-size: 1.5rem; } }
@@ -169,51 +193,62 @@ nav {
 #projects-section {
   height: 100vh;
   width: 100vw;
-  color: #777; }
-  #projects-section nav a {
-    color: #695569; }
-  #projects-section #projects {
-    margin: 3rem; }
-    #projects-section #projects .project-container {
-      display: flex;
-      flex-direction: column; }
-      @media screen and (min-width: 600px) {
-        #projects-section #projects .project-container {
-          display: flex;
-          flex-direction: row; } }
-      @media screen and (min-width: 900px) {
-        #projects-section #projects .project-container {
-          margin: 0 6rem; } }
-      #projects-section #projects .project-container .project {
-        height: 28vh;
+  color: #fff;
+  position: relative; }
+  #projects-section h2 {
+    font-size: 2.5rem;
+    color: #695569;
+    margin: 0 0 5rem 4rem; }
+  #projects-section .project-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; }
+    @media screen and (min-width: 650px) {
+      #projects-section .project-container {
+        position: relative;
+        top: 15rem; } }
+    #projects-section .project-container .project {
+      height: 15rem;
+      width: 15rem;
+      clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+      background-color: #ef7f81;
+      margin: 1rem; }
+      @media screen and (min-width: 650px) {
+        #projects-section .project-container .project {
+          height: 22rem;
+          width: 22rem; } }
+      #projects-section .project-container .project .project-titel {
         text-align: center;
-        margin: 1rem 0;
-        width: auto; }
-        @media screen and (min-width: 600px) {
-          #projects-section #projects .project-container .project {
-            width: 40vw; } }
-      #projects-section #projects .project-container .project-uitleg {
-        font-size: 1.3rem;
-        text-align: justify; }
-        @media screen and (min-width: 600px) {
-          #projects-section #projects .project-container .project-uitleg {
-            width: 40vw;
-            margin: 1.5rem;
-            font-size: 1.4rem; } }
-        @media screen and (min-width: 800px) {
-          #projects-section #projects .project-container .project-uitleg {
-            width: 40vw;
-            margin: 1.5rem;
-            font-size: 1.6rem; } }
-    #projects-section #projects #project-1 {
-      background-image: url(../img/feelGood.png);
-      background-size: cover;
-      background-position: top; }
-    #projects-section #projects #project-2 {
-      background-image: url(../img/weerbericht.png);
-      background-size: cover;
-      background-position: top; }
-    #projects-section #projects #project-3 {
-      background-image: url(../img/temperatuurCalculator.png);
-      background-size: cover;
-      background-position: top; }
+        position: relative;
+        top: 5rem;
+        font-size: 1.5rem; }
+      #projects-section .project-container .project:hover {
+        background: rgba(169, 238, 230, 0.7);
+        color: #695569; }
+    #projects-section .project-container #project-2 {
+      position: relative;
+      right: 8rem;
+      bottom: 4rem; }
+      @media screen and (min-width: 650px) {
+        #projects-section .project-container #project-2 {
+          right: 11.5rem;
+          bottom: 5rem; } }
+    #projects-section .project-container #project-3 {
+      position: relative;
+      bottom: 8rem; }
+      @media screen and (min-width: 650px) {
+        #projects-section .project-container #project-3 {
+          bottom: 10.5rem; } }
+    #projects-section .project-container #project-uitleg {
+      color: #695569;
+      background-color: rgba(169, 238, 230, 0.7);
+      position: relative;
+      bottom: 38rem;
+      left: 8.5rem;
+      display: none; }
+      @media screen and (min-width: 650px) {
+        #projects-section .project-container #project-uitleg {
+          bottom: 53rem;
+          left: 12rem; } }
