--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ justify-content: center;
 
 
 .mid{
-  background-image:  url("/jadexyz.jpg");
+  background-image:  url("https://i.ibb.co/x73W6m8/jadexyz.jpg");
   display: flex;
   justify-content: center;
   align-items:center;
